@@ -1,17 +1,10 @@
 {
-  "timestamp" : "2022-07-22T16:26:19Z",
-  "count_outdated" : 371,
-  "uniques_outdated" : 234,
-  "count" : 398,
+  "timestamp" : "2022-07-23T01:26:10Z",
+  "count_outdated" : 373,
+  "uniques_outdated" : 235,
+  "count" : 400,
   "uniques" : 251,
   "clones" : [
-    {
-      "timestamp": "2022-07-08T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 2 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 1 ]
-    },
     {
       "timestamp": "2022-07-09T00:00:00Z",
       "count": 2,
@@ -84,8 +77,8 @@
     },
     {
       "timestamp": "2022-07-22T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 1 ],
+      "count": 2,
+      "count_minmax": [ 1, 2 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ]
     }
